# Backend-Kmdb

./: pyproject.toml  requirements.txt
_core/: settings.py
tests/factories/: user_factories.py
users/: serializers.py  views.py
users/management/commands/: create_admin
workspace/: kmdb-workspace.json
